cc-user-interface/src/pages/home2.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

body {
    min-height: 100vh;
    background: url('background.jpg') no-repeat;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    overflow: hidden;
}

.homePage {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 110vh;
}

.navigation {
    position: fixed;
    top: 0;
    display: flex;
    justify-content: space-around;
    text-decoration: none;
    height: 100px;
    line-height: 100px;
    width: 100%;
    z-index: 100;
}

.logo p{
    font-size: 2em;
    color: #36332d;
    user-select: none;
    font-weight: 600;
    padding: 5px;
}

.navigationMenu {
    z-index: 100px;
}

.navigationMenu ul{
    display: flex;
    padding: 5px;
}

.navigationMenu ul li{
    list-style-type: none;
}

.navigationMenu ul li .link{
    text-decoration: none;
    font-weight: 500;
    color: #4f483f;
    padding-bottom: 7px;
    margin: 0 25px;
}

.link:hover, .active{
    border-bottom: 2px solid #4f483f;
}

.navigationButton {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 100px;
    /* overflow: hidden; */
}

.navigationButton .button{
    width: 120px;
    height: 40px;
    background: transparent;
    border: 2px solid #4f483f;
    outline: none;
    border-radius: 6px;
    cursor: pointer;
    font-size: 0.9em;
    font-weight: 500;
    color: #4f483f;
    margin-left: 5px;
    float: right;
    position: relative;
    bottom: 0px;
}

.button:hover {
    background: #4f483f;
    color: #f4efe8;
}

.ubi {
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    width: 450px;
    height: 700px;
    background: #f4efe8;
    border-radius: 20px;
    border: #415046 solid 2px;
    position: fixed;
    top: 50%;
    left: 25%;
    transform: translate(-50%, -50%);
    padding: 10px;
    padding-top: 20px;
}

.container {
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    width: 500px;
    height: 700px;
    background: #f4efe8;
    border-radius: 20px;
    border: #415046 solid 2px;
    position: fixed;
    top: 50%;
    left: 75%;
    transform: translate(-50%, -50%);
    padding: 10px;
    padding-top: 20px;
}

.ingredientSelect{
    width: 200px;
    overflow: hidden;
    flex: 1
}

.deleteButton{
    margin-left: 10px;
}

.recipeListr{
    margin-top: 100px;
}

.list {
    justify-content: center;
    display: grid;
    align-items: center;
}

.ingredientSubmit {
    width: 25%
}

.react-modal-content {
    width: 500px;
    height: 300px;
    margin: auto;
    border: 1px solid #ccc;
    background: #f4efe8;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    color: rgb(255, 0, 0);
    font-size: 1.2em;
    overflow: auto;
    font-weight: 500;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 200px;
  }

